force-app/main/default/objects/Service__c/fields/Cost_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Cost_After_Discount__c</fullName>
    <formula>Repair_Cost__c * (1 - Discount__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>