force-app/main/default/objects/Service__c/fields/Estimated_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pickup__c</fullName>
    <label>Estimated Pickup</label>
    <type>DateTime</type>
</CustomField>