force-app/main/default/objects/Service__c/fields/Fault_Description__c.field-meta.xml
<CustomField>
    <fullName>Fault_Description__c</fullName>
    <label>Fault Description</label>
    <type>TextArea</type>
</CustomField>