force-app/main/default/objects/Service__c/fields/Mileage_km__c.field-meta.xml
<CustomField>
    <fullName>Mileage_km__c</fullName>
    <label>Mileage (km)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>