force-app/main/default/objects/Service__c/fields/Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Cost__c</fullName>
    <label>Repair Cost</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>