force-app/main/default/objects/Service__c/fields/Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>Repair_Status__c</fullName>
    <inlineHelpText>Select the current status of the service order. Update this field every time the repair stage changes.</inlineHelpText>
    <label>Repair Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>