force-app/main/default/objects/Service__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <displayFormat>SV-{0000}</displayFormat>
    <label>Service Code</label>
    <type>AutoNumber</type>
</CustomField>