force-app/main/default/objects/Service__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <label>Service Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>