force-app/main/default/objects/Service__c/fields/Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Service_Report__c</fullName>
    <label>Service Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>