force-app/main/default/objects/Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <inlineHelpText>Select all service types that apply to this repair. Multiple values can be chosen.</inlineHelpText>
    <label>Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanics</fullName>
            </value>
            <value>
                <fullName>Electrics</fullName>
            </value>
            <value>
                <fullName>Body Work</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>