force-app/main/default/objects/Service__c/fields/Technician_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technician_Notes__c</fullName>
    <label>Technician Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>