force-app/main/default/objects/Service__c/fields/Under_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Under_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the repair is covered under manufacturer or dealer warranty. No additional charges will apply.</inlineHelpText>
    <label>Under Warranty</label>
    <type>Checkbox</type>
</CustomField>