force-app/main/default/objects/Service__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>17</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>