force-app/main/default/objects/Service__c/validationRules/Estimated_Pickup_Before_Date_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Pickup_Before_Date_Received</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Setup.Validation_Rule_Bypass__c.Bypass_Validation_Rules__c),
    NOT(ISBLANK(Estimated_Pickup__c)),
    NOT(ISBLANK(Date_Received__c)),
    DATEVALUE(Estimated_Pickup__c) &lt; Date_Received__c
)</errorConditionFormula>
    <errorMessage>The estimated pickup date cannot be earlier than the vehicle intake date.</errorMessage>
</ValidationRule>