force-app/main/default/objects/Service__c/listViews/TestView.listView-meta.xml
<ListView>
    <fullName>TestView</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Case__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Discount__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Discount__c</field>
        <operation>lessOrEqual</operation>
        <value>10.0</value>
    </filters>
    <label>TestView</label>
</ListView>